--- a/CSSanimasjon/animation.html
+++ b/CSSanimasjon/animation.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="click">
-        <h2 class="hover">Hover for å se animasjoner</h2>
+        <h2 class="hover"><span>Hover for å se animasjoner</span></h2>
         <a class="button yellow" id="btnRotate">Rotate
             <!-- <input type="checkbox" id="check">
         <label for="check" id="btnRotate">
@@ -170,7 +170,9 @@
         </ul>
     </div>
 
-    <h2>Kopier kode og <a href="https://codepen.io/merethee/pen/BOqaGo">prøv selv!</a></h2>
+   
+    <h2 class="copy-code"><span>Kopier kode og <a href="https://codepen.io/merethee/pen/BOqaGo">prøv selv!</span></a></h2>
+
     <pre>
         <code>
     <span style="color:rgb(219, 62, 219);">&#64;keyframe</span> <span style="color:rgb(245, 191, 121);">.stretch</span> {
@@ -205,7 +207,7 @@
     </div>
      <div class="end">
         <p>Alt som er brukt i denne artikkelen er <u>kun</u> CSS</p><br>
-        <p><strong>Av:</strong> Merethe Ølstøren</p>
+        <p><strong>Av: Merethe Ølstøren</strong></p>
     </div>
 
     <h2 id="lesmer">Les mer:</h2>
@@ -235,16 +237,16 @@
             <img src="../images/helloworld2x.png" alt="logo">
         </div>
         <div class="icons">
-            <img src="icons/placeholder.svg" alt="place">
-            <img src="icons/email.svg" alt="email">
-            <img src="icons/telephone.svg" alt="phone">
+            <img src="icons/place.png" alt="place">
+            <img src="icons/mail.png" alt="email">
+            <img src="icons/telefon.png" alt="phone">
             <p>Kong sverresgate 17, 5523 Haugesund</p>
             <p>hello.world@gmail.com</p>
             <p>+47 98 67 34 12</p>
             <div class="some">
-                <img src="icons/linkedin.svg" alt="linkedin" >
-                <img src="icons/instagram.svg" alt="insta">
-                <img src="icons/facebook.svg" alt="face">
+                <img src="icons/linkedin.png" alt="linkedin" >
+                <img src="icons/instagram.png" alt="insta">
+                <img src="icons/github.png" alt="github">
             </div>
         </div>
     </div>
