--- a/CSSanimasjon/animation.html
+++ b/CSSanimasjon/animation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 
 <head>
     <meta charset="utf-8">
@@ -46,8 +46,7 @@
         <div class="text">
             <div class="triangle small"></div>
             <p><strong style="color:#00adf6">CSS animasjoner</strong> er basert på den enkle og enkle å bruke standard
-                CSS3 animasjoner API.
-                Du kan bruke dem til å animere nesten alle innfødte visninger uten å måtte kjenne JavaScript.<br><br>
+                CSS3 animasjoner API. Du kan bruke dem til å animere nesten alle innfødte visninger uten å måtte kjenne JavaScript.<br><br>
                 Du har potensial til å endre utseendet og oppførselen til et element når en tilstandsendring oppstår,
                 for eksempel når den berøres eller aktiveres. Du kan bruke flere rammer og endre animasjonsretningen.
                 <br>Til slutt, med CSS animasjoner, kan du skille animasjonskoden fra programlogikken.</p>
@@ -77,17 +76,12 @@
     <div class="text second">
         <p>CSS animasjoner består av to komponenter: en stil som beskriver CSS-animasjonen og et sett med
             nøkkelrammer som indikerer start- og slutt tilstandene til animasjonens stil, samt mulige
-            mellomliggende veipunkter.
-            Du kan endre så<br> mange animerte CSS egenskaper du vil, så<br> mange ganger du vil.</p>
+            mellomliggende veipunkter. Du kan endre så<br> mange animerte CSS egenskaper du vil, så<br> mange ganger du vil.</p>
     </div>
 
     <div class="click">
         <h2 class="hover"><span>Hover for å se animasjoner</span></h2>
-        <a class="button yellow" id="btnRotate">Rotate
-            <!-- <input type="checkbox" id="check">
-        <label for="check" id="btnRotate">
-        </label> -->
-        </a>
+        <a class="button yellow" id="btnRotate">Rotate</a>
         <a class="button blue" id="btnSlide">Slide</a>
         <a class="button orange" id="btnJello">Jello</a>
         <a class="button green" id="btnBounce">Bounce</a>
@@ -150,28 +144,27 @@
     <h2 class="egenskaper">Animasjonegenskaper</h2>
     <div class="text-ae">
         <p><strong style="color:#00adf6">Følgende liste presenterer alle animasjonsegenskaper:</strong> </p>
+        <div class="triangle big"></div>
         <ul>
-            <li><strong>animation-name:</strong> Angir navnet på @keyframes-regelen som skal brukes. </li><br>
-            <li><strong>aimation-delay:</strong> Angir tiden mellom stilen er brukt og begynnelsen av animasjonen.
-            </li><br>
-            <div class="triangle big"></div>
-            <li><strong>animation-duration:</strong> Lengden på animasjonen i sekunder.</li><br>
+            <li><strong>animation-name:</strong> Angir navnet på @keyframes-regelen som skal brukes. </li>
+            <li><strong>aimation-delay:</strong> Angir tiden mellom stilen er brukt og begynnelsen av animasjonen.</li>
+            <li><strong>animation-duration:</strong> Lengden på animasjonen i sekunder.</li>
             <li><strong>animation-iteration-count:</strong> Angir hvor mange ganger animasjonen skal spilles.
-                Standard er 1. For å gjenta en animasjon for alltid, bruk uendelig.</li><br>
+                Standard er 1. For å gjenta en animasjon for alltid, bruk uendelig.</li>
             <li><strong>animation-timing-function:</strong> Definerer hvordan animasjonen overgår
-                gjennom keyframes ved å etablere akselerasjonskurver.</li><br>
+                gjennom keyframes ved å etablere akselerasjonskurver.</li>
             <li><strong>animation-fill-mode:</strong> Konfigurerer hvilke verdier som brukes av
-                animasjonen etter at den er utført.</li><br>
+                animasjonen etter at den er utført.</li>
             <li><strong>animation-direction:</strong> Konfigurerer om animasjonen skal alternere
                 retningen på hver runde gjennom sekvensen eller nullstill til
-                startpunktet og gjenta seg selv.</li><br>
+                startpunktet og gjenta seg selv.</li>
             <li><strong>animation:</strong> Shorthand-egenskapen tillater å sette alle
-                animasjonsegenskaper i en enkelt linje.</li><br>
+                animasjonsegenskaper i en enkelt linje.</li>
         </ul>
     </div>
 
    
-    <h2 class="copy-code"><span>Kopier kode og <a href="https://codepen.io/merethee/pen/BOqaGo">prøv selv!</span></a></h2>
+    <h2 class="copy-code"><span>Kopier kode og <a href="https://codepen.io/merethee/pen/BOqaGo">prøv selv!</a></span></h2>
 
     <pre>
         <code>
