--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
                 <img src="images/helloworld2x.png" alt="logo">
             </div>
             <div class="icons">
-                <img src="icons/placeholder.svg" alt="place">
-                <img src="icons/email.svg" alt="email">
-                <img src="icons/telephone.svg" alt="phone">
+                <img src="icons/place.png" alt="place">
+                <img src="icons/mail.png" alt="email">
+                <img src="icons/telefon.png" alt="phone">
                 <p>Kong sverresgate 17, 5523 Haugesund</p>
                 <p>hello.world@gmail.com</p>
                 <p>+47 98 67 34 12</p>
                 <div class="some">
-                    <img src="icons/linkedin.svg" alt="linkedin">
-                    <img src="icons/instagram.svg" alt="insta">
-                    <img src="icons/facebook.svg" alt="face">
+                    <img src="icons/linkedin.png" alt="linkedin" >
+                    <img src="icons/instagram.png" alt="insta">
+                    <img src="icons/github.png" alt="github">
                 </div>
             </div>
         </div>
