--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" href="artikkel.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 </head>
@@ -113,6 +114,7 @@
                     <p>Grunnleggende programmering</p>
                 </div>
             </a>
+            
             <div class="artikkel del_to">
                 <a href="#">
                     <div class="artikkel sju">
@@ -155,7 +157,7 @@
 
         <div class="footer">
             <div class="logo liten">
-                <img src="images/helloworld2x.png" alt="logo">
+                <img src="images/helloworld2x.png" alt="logoz">
             </div>
             <div class="icons">
                 <img src="icons/place.png" alt="place">
@@ -173,8 +175,7 @@
         </div>
     </div>
 
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
