--- a/Tagsider/css_tag.html
+++ b/Tagsider/css_tag.html
@@ -8,7 +8,8 @@
     <title>CSS</title>
     <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" type="text/css" href="css_style.css">
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" href="../artikkel.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="shortcut icon" href="img/logo/helloworld2x.png" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
@@ -66,54 +67,46 @@
         <div class="img_box"> </div>
         <h2>Artikler om CSS</h2>
     </div>
-    <main>
-        <aside class="lesmer">
-            <main>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/css/css-syntax.png">
-                        <h3>CSS syntax</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/css/css_animation2.png">
-                        <h3>CSS animation</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/css/css_parallax_image.svg">
-                        <h3>Parallaxing med kun CSS</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/css/css_buttons3.png">
-                        <h3>CSS buttons</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/css/css_border.png">
-                        <h3>Borders</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/css/css_gradient.svg">
-                        <h3>Gradient</h3>
-                    </a>
-                </article>
-            </main>
-        </aside>
-    </main>
+    
+    <div class="artikkel del_to">
+        <a href="#">
+            <div class="artikkel sju">
+                <div class="corner marker_css"></div>
+                <p>YouTube Video Player med CSS</p>
+            </div>
+        </a>
+        <a href="Prallax/article.html">
+            <div class="artikkel åtte">
+                <div class="corner marker_css"></div>
+                <p>CSS Parallax</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="artikkel ni">
+                <div class="corner marker_css"></div>
+                <p>Lær CSS på 10 minutter</p>
+            </div>
+        </a>
+        <a href="Bokssizing/boxsizing.html">
+            <div class="artikkel ti">
+                <div class="corner marker_css"></div>
+                <p>CSS Borderbox</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="artikkel ellve">
+                <div class="corner marker_css"></div>
+                <p>CSS Tutorial</p>
+            </div>
+        </a>
+        <a href="CSSanimasjon/animation.html">
+            <div class="artikkel tolv">
+                <div class="corner marker_css"></div>
+                <p>CSS Animasjoner</p>
+            </div>
+        </a>
+    </div>
+
 
     <!-- Footer -->
     <div class="footer">
@@ -121,19 +114,20 @@
             <img src="img/logo/helloworld2x.png" alt="logo">
         </div>
         <div class="icons">
-            <img src="icons/placeholder.svg" alt="place">
-            <img src="icons/email.svg" alt="email">
-            <img src="icons/telephone.svg" alt="phone">
+            <img src="icons/place.png" alt="place">
+            <img src="icons/mail.png" alt="email">
+            <img src="icons/telefon.png" alt="phone">
             <p>Kong sverresgate 17, 5523 Haugesund</p>
             <p>hello.world@gmail.com</p>
             <p>+47 98 67 34 12</p>
             <div class="some">
-                <img src="icons/linkedin.svg" alt="linkedin">
-                <img src="icons/instagram.svg" alt="insta">
-                <img src="icons/facebook.svg" alt="face">
+                <img src="icons/linkedin.png" alt="linkedin" >
+                <img src="icons/instagram.png" alt="insta">
+                <img src="icons/github.png" alt="github">
             </div>
         </div>
     </div>
+
 
 </body>
 
