--- a/Tagsider/html_tag.html
+++ b/Tagsider/html_tag.html
@@ -8,7 +8,8 @@
     <title>HTML</title>
     <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" type="text/css" href="html_style.css">
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" href="../artikkel.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="shortcut icon" href="img/logo/helloworld2x.png" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
@@ -16,8 +17,6 @@
 </head>
 
 <body>
-
-    <!-- MENY -->
     <div class="top">
         <div class="logo">
             <a href="../index.html">
@@ -40,14 +39,12 @@
         </div>
     </div>
 
-    <!-- HTML header on side -->
     <div class="heading">
         <h1>HTML</h1>
         <div class="html_head_marker">
         </div>
     </div>
 
-    <!-- Information box -->
     <div class="tag_information">
         <div class="text_box">
             <!-- Wikipedia -->
@@ -72,71 +69,66 @@
         <div class="img_box"> </div>
         <h2>Artikler om HTML</h2>
     </div>
-    <main>
-        <aside class="lesmer">
-            <main>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/html/html_syntax_pankaj-patel.jpg">
-                        <h3>HTML syntax</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/html/html_tags2.jpg">
-                        <h3>HTML tags</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/html/html_table.png">
-                        <h3>HTML table</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/html/html_form.png">
-                        <h3>HTML form</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/html/html_syntax_sai-kiran-anagani.jpg">
-                        <h3>HTML classegenskaper</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/html/html_syntax.png">
-                        <h3>HTML åpnings- og endelsestag</h3>
-                    </a>
-                </article>
-            </main>
-        </aside>
-    </main>
 
-    <!-- Footer -->
+    <div class="artikkel del_en">
+        <a href="#">
+            <div class="artikkel en">
+                <div class="corner marker_html"></div>
+                <p>Hva er nytt i HTML 5?</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel to">
+                <div class="corner marker_html"></div>
+                <p>Trender i HTML</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel tre">
+                <div class="corner marker_html"></div>
+                <p>Introduksjon til HTML5</p>
+            </div>
+        </a>
+
+        <a href="Class&ID/index.html">
+            <div class="artikkel fire">
+                <div class="corner marker_html"></div>
+                <p>Forskjell mellom Class & ID</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel fem">
+                <div class="corner marker_html"></div>
+                <p>HTML Layout Tutorial</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel seks">
+                <div class="corner marker_html"></div>
+                <p>Grunnleggende HTML</p>
+            </div>
+        </a>
+    </div>
+
     <div class="footer">
         <div class="logo liten">
             <img src="img/logo/helloworld2x.png" alt="logo">
         </div>
         <div class="icons">
-            <img src="icons/placeholder.svg" alt="place">
-            <img src="icons/email.svg" alt="email">
-            <img src="icons/telephone.svg" alt="phone">
+            <img src="icons/place.png" alt="place">
+            <img src="icons/mail.png" alt="email">
+            <img src="icons/telefon.png" alt="phone">
             <p>Kong sverresgate 17, 5523 Haugesund</p>
             <p>hello.world@gmail.com</p>
             <p>+47 98 67 34 12</p>
             <div class="some">
-                <img src="icons/linkedin.svg" alt="linkedin">
-                <img src="icons/instagram.svg" alt="insta">
-                <img src="icons/facebook.svg" alt="face">
+                <img src="icons/linkedin.png" alt="linkedin" >
+                <img src="icons/instagram.png" alt="insta">
+                <img src="icons/github.png" alt="github">
             </div>
         </div>
     </div>
