--- a/Tagsider/js_tag.html
+++ b/Tagsider/js_tag.html
@@ -8,7 +8,8 @@
     <title>JavaScript</title>
     <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" type="text/css" href="js_style.css">
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" href="../artikkel.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="shortcut icon" href="img/logo/helloworld2x.png" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
@@ -16,8 +17,6 @@
 </head>
 
 <body>
-
-    <!-- MENY -->
     <div class="top">
         <div class="logo">
             <a href="../index.html">
@@ -40,14 +39,12 @@
         </div>
     </div>
 
-    <!-- CSS header on side -->
     <div class="heading">
         <h1>JavaScript</h1>
         <div class="head-marker">
         </div>
     </div>
 
-    <!-- Information box -->
     <div class="tag_information">
         <div class="text_box">
             <!-- Wikipedia -->
@@ -64,71 +61,66 @@
         <div class="img_box"> </div>
         <h2>Artikler om JavaScript</h2>
     </div>
-    <main>
-        <aside class="lesmer">
-            <main>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/js/js_countdown.png">
-                        <h3>JavaScript nedtelling</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/js/js_js2.jpg">
-                        <h3>Grunnleggende JavaScript</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/js/js_looping.png">
-                        <h3>Looping</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/js/js_slideshow..jpg">
-                        <h3>JavaScript slideshow</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/js/js_stars.jpg">
-                        <h3>JavaScript stars</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="*">
-                        <div class="corner_marker"></div>
-                        <img src="img/js/js_toggle.jpg">
-                        <h3>JavaScript toggle-knapp</h3>
-                    </a>
-                </article>
-            </main>
-        </aside>
-    </main>
+    <div class="artikkel del_en">
+        <a href="#">
+            <div class="artikkel sju">
+                <div class="corner marker_js"></div>
+                <p>Hva er nytt i JS?</p>
+            </div>
+        </a>
 
-    <!-- Footer -->
+        <a href="#">
+            <div class="artikkel to">
+                <div class="corner marker_js"></div>
+                <p>Trender i Javascript</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel tre">
+                <div class="corner marker_js"></div>
+                <p>Introduksjon til JS</p>
+            </div>
+        </a>
+
+        <a href="Class&ID/index.html">
+            <div class="artikkel fire">
+                <div class="corner marker_js"></div>
+                <p>Javascript</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel fem">
+                <div class="corner marker_js"></div>
+                <p>JS Layout Tutorial</p>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="artikkel seks">
+                <div class="corner marker_js"></div>
+                <p>Grunnleggende JS</p>
+            </div>
+        </a>
+    </div>
+
+
     <div class="footer">
         <div class="logo liten">
             <img src="img/logo/helloworld2x.png" alt="logo">
         </div>
         <div class="icons">
-            <img src="icons/placeholder.svg" alt="place">
-            <img src="icons/email.svg" alt="email">
-            <img src="icons/telephone.svg" alt="phone">
+            <img src="icons/place.png" alt="place">
+            <img src="icons/mail.png" alt="email">
+            <img src="icons/telefon.png" alt="phone">
             <p>Kong sverresgate 17, 5523 Haugesund</p>
             <p>hello.world@gmail.com</p>
             <p>+47 98 67 34 12</p>
             <div class="some">
-                <img src="icons/linkedin.svg" alt="linkedin">
-                <img src="icons/instagram.svg" alt="insta">
-                <img src="icons/facebook.svg" alt="face">
+                <img src="icons/linkedin.png" alt="linkedin" >
+                <img src="icons/instagram.png" alt="insta">
+                <img src="icons/github.png" alt="github">
             </div>
         </div>
     </div>
