--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="https://source.unsplash.com/ipARHaxETRk/1400x600" style="width:100%">
+                <img src="https://source.unsplash.com/ipARHaxETRk/1400x600" style="width:100%" alt="school">
                 <div class="text">Tips til hvordan du kan være mer produktiv</div>
             </div>
 
             <div class="mySlides fade">
-                <img src="https://source.unsplash.com/SYTO3xs06fU/1400x600" style="width:100%">
+                <img src="https://source.unsplash.com/SYTO3xs06fU/1400x600" style="width:100%" alt="work-desk">
                 <div class="text">Les hvorfor prototyping er viktig</div>
             </div>
 
             <div class="mySlides fade">
-                <img src="https://source.unsplash.com/mqpMdf1MeRE/1400x600" style="width:100%">
+                <img src="https://source.unsplash.com/mqpMdf1MeRE/1400x600" style="width:100%" alt="team-work">
                 <div class="text">Studie viser at vi jobber bedre sammen</div>
             </div>
 
             <div class="mySlides fade">
-                <img src="https://source.unsplash.com/hGV2TfOh0ns/1400x600" style="width:100%">
+                <img src="https://source.unsplash.com/hGV2TfOh0ns/1400x600" style="width:100%" alt="home-office">
                 <div class="text">Hjemmekontor minsker stress</div>
             </div>
 
