--- a/CSSanimasjon/animation.html
+++ b/CSSanimasjon/animation.html
@@ -99,7 +99,7 @@
 
         <div id="popup1" class="overlay">
             <div class="popup">
-                <input type="checkbox" id="cb">
+                <input type="checkbox" id="ob">
                 <label for="cb" class="close">
                     X
                 </label>
@@ -117,13 +117,13 @@
 
     <div class="knapp-popup ease">
         <input type="checkbox" id="cb2">
-        <label for="cb2" id="btnPopup">
+        <label for="cb2" id="btnPopup2">
             +
         </label>
 
         <div id="popup2" class="overlay-to">
             <div class="popup">
-                <input type="checkbox" id="cb2">
+                <input type="checkbox" id="ob2">
                 <label for="cb2" class="close">
                      X
                 </label>
